# HarnessBox

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: quickstart.py
harnessbox/: __init__.py  _setup.py  harness.py  hooks.py  lifecycle.py  providers.py  sandbox.py  security.py  workspace.py
harnessbox/_providers/: __init__.py  daytona.py  docker.py  e2b.py  ec2.py
harnessbox/config/: __init__.py  harness.py  manifest.py
harnessbox/security/: __init__.py  events.py
tests/: conftest.py  test_events.py  test_harness.py  test_hooks.py  test_lifecycle.py  test_providers.py  test_sandbox.py  test_sandbox_events.py  test_sandbox_files.py  test_sandbox_workspace.py  test_security.py  test_setup.py  test_workspace.py
