[project]
name = "harnessbox"
version = "0.1.0"
description = "Sandbox security primitives and unified API for AI coding agents in cloud sandboxes"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
e2b = ["e2b>=1.0.0"]

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "e2b.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
