[project]
name = "harnessbox"
version = "0.2.0"
description = "Sandbox security, workspace, and harness primitives for AI coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []
keywords = ["ai", "agents", "sandbox", "security", "claude-code", "e2b", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Nikhil-Kadapala/HarnessBox"
Repository = "https://github.com/Nikhil-Kadapala/HarnessBox"
Issues = "https://github.com/Nikhil-Kadapala/HarnessBox/issues"

[project.optional-dependencies]
e2b = ["e2b>=1.0.0"]

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "e2b.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
